// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondaryHeader component 1 renders as expected 1`] = `
<div
  aria-label="hello world secondary"
  className="secondary-header-wrapper-min"
  role="region"
>
  <div
    className="secondary-header simple-header"
  >
    <h1
      className="bx--detail-page-header-title"
    >
      hello world
    </h1>
  </div>
</div>
`;

exports[`SecondaryHeader component 2 renders as expected 1`] = `
<div
  aria-label="hello world"
  className="secondary-header-wrapper"
  role="region"
>
  <div
    className="secondary-header simple-header"
  >
    <header>
      <div
        className="bx--detail-page-header-content"
      >
        <div
          className="bx--detail-page-header-title-container"
        >
          <h1
            className="bx--detail-page-header-title"
          >
            hello world
          </h1>
        </div>
        <nav
          aria-label="hello world undefined"
          className="bx--tabs"
          role="navigation"
          selected={0}
        >
          <div
            aria-label="listbox"
            className="bx--tabs-trigger"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <a
              className="bx--tabs-trigger-text"
              href="#"
              onClick={[Function]}
              tabIndex={-1}
            >
              Application
            </a>
            <svg
              alt="show menu options"
              aria-label="show menu options"
              className={undefined}
              fill={undefined}
              fillRule="evenodd"
              height="5"
              name={undefined}
              role="img"
              style={undefined}
              viewBox="0 0 10 5"
              width="10"
            >
              <title>
                show menu options
              </title>
              <path
                d="M0 0l5 4.998L10 0z"
              />
            </svg>
          </div>
          <ul
            className="bx--tabs__nav bx--tabs__nav--hidden"
            role="tablist"
          >
            <li
              className="bx--tabs__nav-item bx--tabs__nav-item--selected"
              id="dashboard-application"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={true}
              tabIndex={-1}
            >
              <a
                aria-selected={true}
                className="bx--tabs__nav-link"
                href="/multicloud/dashboard"
                role="tab"
                tabIndex={0}
              >
                Application
              </a>
            </li>
          </ul>
        </nav>
        <div
          aria-hidden={false}
          className={undefined}
          hidden={false}
          selected={true}
        />
      </div>
    </header>
  </div>
</div>
`;

exports[`SecondaryHeader component 3 renders as expected 1`] = `
<div
  aria-label="hello world"
  className="secondary-header-wrapper"
  role="region"
>
  <div
    className="secondary-header simple-header"
  >
    <header>
      <div
        className="bx--detail-page-header-content"
      >
        <div
          className="bx--detail-page-header-title-container"
        >
          <h1
            className="bx--detail-page-header-title"
          >
            hello world
          </h1>
        </div>
        <nav
          aria-label="hello world undefined"
          className="bx--tabs"
          role="navigation"
          selected={0}
        >
          <div
            aria-label="listbox"
            className="bx--tabs-trigger"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <a
              className="bx--tabs-trigger-text"
              href="#"
              onClick={[Function]}
              tabIndex={-1}
            >
              Application
            </a>
            <svg
              alt="show menu options"
              aria-label="show menu options"
              className={undefined}
              fill={undefined}
              fillRule="evenodd"
              height="5"
              name={undefined}
              role="img"
              style={undefined}
              viewBox="0 0 10 5"
              width="10"
            >
              <title>
                show menu options
              </title>
              <path
                d="M0 0l5 4.998L10 0z"
              />
            </svg>
          </div>
          <ul
            className="bx--tabs__nav bx--tabs__nav--hidden"
            role="tablist"
          >
            <li
              className="bx--tabs__nav-item bx--tabs__nav-item--selected"
              id="logs-tab1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={true}
              tabIndex={-1}
            >
              <a
                aria-selected={true}
                className="bx--tabs__nav-link"
                href="/multicloud/dashboard"
                role="tab"
                tabIndex={0}
              >
                Application
              </a>
            </li>
            <li
              className="bx--tabs__nav-item"
              id="logs-tab2"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={false}
              tabIndex={-1}
            >
              <a
                aria-selected={false}
                className="bx--tabs__nav-link"
                href="/hello"
                role="tab"
                tabIndex={-1}
              >
                provide a label
              </a>
            </li>
          </ul>
        </nav>
        <div
          aria-hidden={false}
          className={undefined}
          hidden={false}
          selected={true}
        />
        <div
          aria-hidden={true}
          className={undefined}
          hidden={true}
          selected={false}
        />
      </div>
    </header>
  </div>
</div>
`;

exports[`SecondaryHeader component 4 renders as expected 1`] = `
<div
  aria-label="hello world secondary"
  className="secondary-header-wrapper-min"
  role="region"
>
  <div
    className="secondary-header simple-header"
  >
    <h1
      className="bx--detail-page-header-title"
    >
      hello world
    </h1>
  </div>
</div>
`;
